snips/error.txt
settings:1035  POST http://test1.local:8000/api/settings/assign_usb 500 (INTERNAL SERVER ERROR)
saveUsbAssignment @ settings:1035
(anonymous) @ settings:1069
settings:1049 Error assigning ph_probe: SyntaxError: Unexpected token '<', "<!doctype "... is not valid JSON
(anonymous) @ settings:1049
Promise.catch
saveUsbAssignment @ settings:1049
(anonymous) @ settings:1069



[2025-10-29 21:43:04 -0400] [3310310] [DEBUG] POST /api/settings/assign_usb
[2025-10-29 21:43:04,415] ERROR in app: Exception on /api/settings/assign_usb [POST]
Traceback (most recent call last):
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask_cors/extension.py", line 194, in wrapped_function
    return cors_after_request(app.make_response(f(*args, **kwargs)))
                                                ^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/api/settings.py", line 357, in assign_usb_device
    reinitialize_relay_service()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'reinitialize_relay_service' is not defined
[2025-10-29 21:43:17 -0400] [3310310] [DEBUG] POST /api/settings/assign_usb
[2025-10-29 21:43:17,885] ERROR in app: Exception on /api/settings/assign_usb [POST]
Traceback (most recent call last):
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask_cors/extension.py", line 194, in wrapped_function
    return cors_after_request(app.make_response(f(*args, **kwargs)))
                                                ^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/venv/lib/python3.11/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/dave/garden/api/settings.py", line 357, in assign_usb_device
    reinitialize_relay_service()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'reinitialize_relay_service' is not defined
